# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2019-04-04 Giuseppe Aruta
   * Added two 2 classes to perform raster processes:
     a) GenericRasterAlgorithm class: a generic class to perform several 
        raster processes currently used by some OpenJUMP plugins: filter by 
        nodata, change nodata value, change data type, etc.
     b) KernelAlgorithm class: a set of filter/kernel operations on raster 
        data
   * VectorizeAlgorithm class: added two methods to perform raster->polygons
     conversion and a method to perform raster->linestrings conversion
   * Correct a bug on GridRasterWrapper raterToMatrix() method: nodata values
     were not recordered on matrix. Added method to create an empty matrix
     from a raster
     
2019-03-21 Giuseppe Aruta.
   * Enhenced RasterHistogramPlugin:
     a) better input layer
     b) added continuous hist. option (unique values)
     c) added option to show hist. as line (QGIS style)
     d) added option to change hist. color
   * StatisticIndices class: added capability to return a map (TreeMap) of each 
     value per number of items

2019-03-17 Giuseppe Aruta.
   * ProfileGraphPlugIn: 
     a) better input layer
     b) added option to change color profile
   * Removed two deprecated classes:
     a) ProfileUtils - substituded by ProfileGraphAlgorithms
        and ProfileGraphGUI
     b) RasterLayerStatisticsPlugin - by DEMStatisticsPlugIn

2019-03-16 Giuseppe Aruta.
    Added drop down list of  raster layers to CreatePolygons/CreateLattice 
    plugins

* release 1.14.1 ***************************************************************

2019-02-28 Nicolas Ribot
  * Corrected another bug preventing some Spatialite tables to be loaded.

2019-02-21 mmichaud <m.michael.michaud@orange.fr>