@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2019-04-07 Giuseppe Aruta
+   * Activated ManageDataPlugIn which substitutes ChangeNoData, 
+     ChangeRangeValueToNoData and ChangeValueToNoData plugins
+
 2019-04-04 Giuseppe Aruta
    * Added two 2 classes to perform raster processes:
      a) GenericRasterAlgorithm class: a generic class to perform several 
